Add rainbow and cloud background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1 hidden>Tamagotchi</h1>
+    <div id="background" class="background">
+      <div class="rainbow"></div>
+    </div>
     <div class="container text-center">
       <div id="egg" class="egg">
         <div id="egg-hole" class="egg-hole" style="visibility:hidden">
